feat: add csv parsing using same logic old excel script did

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^6.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-papaparse": "^4.1.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
