--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-papaparse": "^4.1.0",
+    "xlsx": "^0.18.5",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
